--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "lodash": "^4.17.15",
     "vue": "^2.6.10",
     "vue-js-modal": "^1.3.31",
-    "vuetify": "^2.0.0"
+    "vuetify": "^2.0.0",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
